syntax = "proto3";

package api.check.v1;

import "google/api/annotations.proto";
import "google/protobuf/timestamp.proto";

option go_package = "github.com/GoSimplicity/LinkMe-microservices/api/check/v1;check";

service Check {
	rpc CreateCheck(CreateCheckRequest) returns (CreateCheckReply);
	rpc DeleteCheck(DeleteCheckRequest) returns (DeleteCheckReply) {
		option (google.api.http) = {
			delete: "/delete/{checkId}"
		};
	}
	rpc GetCheckById(GetCheckByIdRequest) returns (GetCheckByIdReply) {
		option (google.api.http) = {
			get: "/get/{checkId}"
		};
	}
	rpc ListChecks(ListChecksRequest) returns (ListChecksReply) {
		option (google.api.http) = {
			post: "/list"
			body: "*"
		};
	}
	rpc SubmitCheck(SubmitCheckRequest) returns (SubmitCheckReply) {
		option (google.api.http) = {
			post: "/submit"
			body: "*"
		};
	}
}

message CreateCheckRequest {
	int64 postId = 1;
}

message CreateCheckReply {
	int32 code = 1;
	string msg = 2;
	int64 checkId = 3;
}

message DeleteCheckRequest {
	int64 checkId = 1;
}

message DeleteCheckReply {
	int32 code = 1;
	string msg = 2;
}

message GetCheckByIdRequest {
	int64 checkId = 1;
}

message GetCheckByIdReply {
	int32 code = 1;
	string msg = 2;
	ListOrGetCheck data = 3;
}

message ListChecksRequest {
	int32 page = 1;
	int64 size = 2;
	uint32 status = 3;
}

message ListChecksReply {
	int32 code = 1;
	string msg = 2;
	repeated ListOrGetCheck data = 3;
}

message SubmitCheckRequest {
	int64 checkId = 1;
	int64 postId = 2;
	uint32 status = 3;
	string remark = 4;
}

message SubmitCheckReply {
	int32 code = 1;
	string msg = 2;
}

message ListOrGetCheck {
	int64 id = 1;                      // 审核ID
	int64 postId = 2;                 // 帖子ID
	string content = 3;                // 审核内容
	string title = 4;                  // 审核标签
	int64 userId = 5;                 // 提交审核的用户ID
	uint32 status = 6;                 // 审核状态
	string remark = 7;                 // 审核备注
	google.protobuf.Timestamp created_at = 8;  // 创建时间
	google.protobuf.Timestamp updated_at = 9;  // 更新时间
}